--- a/sales/sales.css
+++ b/sales/sales.css
@@ -42,7 +42,7 @@
 #left-panel {
     margin-left: 1.1vh;
     position: fixed;
-    left: -200px;
+    left: -300px;
     top: 9vh;
     display: flex;
     transition: left 0.5s ease-out;
@@ -76,6 +76,7 @@
     text-decoration:none;
 }
 #insights-panel {
+    z-index: -1;
     position: fixed;
     left: 5vw;
     top: 55vh;
@@ -95,15 +96,6 @@
     opacity: 0.9;
 }
 
-#updates-container {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    left: 35vh;
-    top: 55vh;
-    width: 50vh;
-    row-gap: 5vh;
-}
 #chart-container {
     position: fixed;
     display: flex;
@@ -127,7 +119,15 @@
     flex-direction: column;
     left: 5vw;
     top: 15vh;
-    row-gap: 4vh;
+    width: 20vw;
+    max-height: 30vh;
+    row-gap: 2vh;
+    overflow-y: auto;
+    padding: 15px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: -1;
 }
 
 .income-panel {
